sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:88: error: not found: value origgBaseTrou
    deplacerTrou((origgBaseTrou+1)%nbBases, 0, 1);
                  ^